# awesome_utils

./: CMakeLists.txt  README.md
bindings/python/: CMakeLists.txt  README.md  pyAwesomeUtils.cpp
doc/: CMakeLists.txt  Doxyfile.in  awesome_utils.dox
include/: cmake_config.h.in
include/awesome_utils/: calib_utils.hpp  cartesian_imp_utils.hpp  cartesian_impedance_utils.hpp  contact_est_utils.hpp  model_interface.hpp  orientation_utils.hpp  power_utils.hpp  sign_proc_utils.hpp  traj_utils.hpp  typedefs.hpp  xbot2_utils.hpp
include/xbot2_utils/: xbot2_utils.hpp
src/: calib_utils.cpp  calib_utils.cpp.autosave  cartesian_imp_utils.cpp  cartesian_impedance_utils.cpp  contact_est_utils.cpp  model_interface.cpp  orientation_utils.cpp  power_utils.cpp  sign_proc_utils.cpp  traj_utils.cpp  xbot2_utils.cpp
tests/: CMakeLists.txt  test_cart_imp_utils.cpp  test_contact_est.cpp  test_iq_out_ros_getter.cpp  test_model_interface.cpp
tests/cmake/: cmake_config.h.in
tests/pybind_tests/: test_model_int_pybinds.py
tests/urdf/: anymal.urdf  awesome_leg.urdf  awesome_leg_floating.urdf  awesome_leg_no_sliding.urdf  awesome_leg_standalone.urdf  quadruped.urdf  test_floating_base.urdf
